<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/signin_credential_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Mobile number or email address"/>
    <EditText
        android:id="@+id/signin_password_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"/>
    <Button
        android:id="@+id/signin_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <View
            android:layout_gravity="center"
            android:layout_weight="2"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:background="@color/colorAccent"/>
        <TextView
            android:gravity="center"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="Or"
            android:textSize="20sp"/>
        <View
            android:layout_gravity="center"
            android:layout_weight="2"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:background="@color/colorAccent"/>
    </LinearLayout>
    <Button
        android:id="@+id/signin_goto_sign_up_activity_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"/>
    <TextView
        android:id="@+id/signin_forgotten_password_tv"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/forgotten_password"
        android:textColor="@color/colorPrimaryDark"/>

</LinearLayout>